# dynamica

./: Building.md  CMakeLists.txt  DynamicaIntroduction.md  Updates.md
Demos/: CMakeLists.txt
Demos/BlendParse/: BasicDemo.cpp  BasicDemo.h  BulletBlendReaderNew.cpp  BulletBlendReaderNew.h  BunnyMesh.h  CMakeLists.txt  main.cpp
Demos/ColladaDemo/: CMakeLists.txt  ColladaDemo.cpp
Demos/OpenGL/: DemoApplication.cpp  GL_DialogDynamicsWorld.cpp  GL_ShapeDrawer.cpp
Demos/ReadBlend/: BasicDemo.cpp  BasicDemo.h  BulletBlendReader.cpp  BulletBlendReader.h  CMakeLists.txt
Demos/SerializeDemo/: CMakeLists.txt  SerializeDemo.cpp  testFile.bullet
Demos/wxWidgetsGLTest/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  main.cpp  main.h
Extras/: CMakeLists.txt
Extras/3dsmax/: bullet_3dsmax2009_32bit.nsi  readme.txt
Extras/3dsmax/compiler/: pxplugin.def
Extras/3dsmax/compiler/vc8win32/: Plugin273.sln  Plugin273.vcproj  Plugin280.sln  Plugin280.vcproj  Plugin281.sln  Plugin281.vcproj
Extras/3dsmax/compiler/xpj/: create_projects_x64.bat  create_vs_projects.bat  maxplugin.xpj  pluginProjectsSDK281_x64.xpj  postbuild.bat  replace_str.py
Extras/3dsmax/doc/: 3ds Max Plugin User Guide.doc  License.txt  Release Notes.htm
Extras/3dsmax/makeinstaller/: SDKVersions.ini  updateInstaller.nsi
Extras/3dsmax/samples/: SeeSawFun.max  antigravity.max  ballbounce.max  clothBall.max  clothTearing.max  fountain.max  frictionramp.max  metalBarrel.max  mousehead.max  simpleJoint.max  softfrog.max  windmill.max
Extras/3dsmax/scripts/physx/: px_base.ms  px_clothproperties.ms  px_control.ms  px_d6joint.ms  px_debug.ms  px_emitter.ms  px_fluid.ms  px_forcefieldproperties.ms  px_joint.ms  px_keymap.ms  px_main.ms  px_manips.ms  px_ragdoll.ms  px_ragdoll_sync.ms  px_rigidbodyproperties.ms  px_settings.ms  px_softbodyproperties.ms  px_tools.ms  px_user.ms
Extras/3dsmax/scripts/startup/: px_startup.ms
Extras/3dsmax/src/: MaxNode.cpp  MaxNode.h  MaxWorld.cpp  MaxWorld.h  MeshHash.cpp  MeshHash.h  MxActor.cpp  MxActor.h  MxCloth.cpp  MxCloth.h  MxContactReport.cpp  MxContactReport.h  MxDebugVisualizer.cpp  MxDebugVisualizer.h  MxExport.h  MxFluid.cpp  MxFluid.h  MxFluidEmitter.cpp  MxFluidEmitter.h  MxForceField.cpp  MxForceField.h  MxJoint.cpp  MxJoint.h  MxMaterial.cpp  MxMaterial.h  MxMesh.cpp  MxMesh.h  MxObjects.cpp  MxObjects.h  MxPluginData.cpp  MxPluginData.h  MxSoftBody.cpp  MxSoftBody.h  MxUserOutputStream.h  MxUtils.cpp  MxUtils.h  NxTetraDLL.cpp  PxFunctions.cpp  PxFunctions.h  PxPlugin.cpp  (+5 more)
Extras/BulletColladaConverter/: ColladaConverter.cpp  ColladaConverter.h
Extras/MayaPlugin/: BulletDynamica.6_module  CMakeLists.txt  Makefile  Makefile.mac  README  bt_box_shape.h  bt_collision_shape.h  bt_composite_shape.h  bt_convex_hull_shape.h  bt_hacd_shape.h  bt_mesh_shape.h  bt_plane_shape.h  bt_rigid_body.cpp  bt_rigid_body.h  bt_soft_body.cpp  bt_soft_body.h  bt_solver.cpp  bt_solver.h  bt_sphere_shape.h  bulletExport.cpp  bulletExport.h  bullet_32bit.nsi  bullet_64bit.nsi  colladaExport.cpp  colladaExport.h  collisionShapeNode.cpp  collisionShapeNode.h  collision_shape.h  collision_shape_impl.h  composite_shape_impl.h  composite_shape_t.h  convex_decomposition_hacd.cpp  convex_decomposition_hacd.h  convex_hull_shape.h  dRigidBodyArrayCmd.cpp  dRigidBodyCmd.cpp  dSoftBodyCmd.cpp  dSoftBodyCmd.h  dSolverCmd.cpp  dSolverNode.cpp  (+21 more)
Extras/MayaPlugin/BulletMayaPlugin.xcodeproj/: project.pbxproj
Extras/MayaPlugin/constraint/: bt_constraint.h  bt_hinge_constraint.h  bt_nail_constraint.h  bt_sixdof_constraint.h  bt_slider_constraint.h  constraint.h  constraint_impl.h  dHingeConstraintCmd.cpp  dNailConstraintCmd.cpp  dSliderConstraintCmd.cpp  dsixdofConstraintCmd.cpp  hingeConstraintNode.cpp  hingeConstraintNode.h  hinge_constraint.h  hinge_constraint_impl.h  nailConstraintNode.cpp  nailConstraintNode.h  nail_constraint.h  nail_constraint_impl.h  sixdofConstraintNode.cpp  sixdofConstraintNode.h  sixdof_constraint.h  sixdof_constraint_impl.h  sliderConstraintNode.cpp  sliderConstraintNode.h  slider_constraint.h  slider_constraint_impl.h
Extras/MayaPlugin/doc/: HELP.txt  index.html
Extras/MayaPlugin/doc/images/: Thumbs.db
Extras/MayaPlugin/icons/: dynamica.xpm  dynamicaActivate-X.xpm  dynamicaActivate-Y.xpm  dynamicaActivate-Z.xpm  dynamicaActivateChain.xpm  dynamicaActivateRadial.xpm  dynamicaActivateRadialIn.xpm  dynamicaActivateX.xpm  dynamicaActivateY.xpm  dynamicaActivateZ.xpm  dynamicaBakeAll.xpm  dynamicaBakeSelected.xpm  dynamicaBulletWebsite.xpm  dynamicaClearInitialState.xpm  dynamicaCreate6dofConstraint.xpm  dynamicaCreateActiveBox.xpm  dynamicaCreateActiveBoxArray.xpm  dynamicaCreateActiveCube.xpm  dynamicaCreateActiveCubeArray.xpm  dynamicaCreateActiveHull.xpm  dynamicaCreateActiveHullArray.xpm  dynamicaCreateActiveMesh.xpm  dynamicaCreateActiveMeshArray.xpm  dynamicaCreateActiveSphere.xpm  dynamicaCreateActiveSphereArray.xpm  dynamicaCreateHingeConstraint.xpm  dynamicaCreateNailConstraint.xpm  dynamicaCreatePassiveBox.xpm  dynamicaCreatePassiveBoxArray.xpm  dynamicaCreatePassiveBvhMesh.xpm  dynamicaCreatePassiveBvhMeshArray.xpm  dynamicaCreatePassiveCube.xpm  dynamicaCreatePassiveCubeArray.xpm  dynamicaCreatePassiveHull.xpm  dynamicaCreatePassiveHullArray.xpm  dynamicaCreatePassiveMesh.xpm  dynamicaCreatePassiveMeshArray.xpm  dynamicaCreatePassivePlane.xpm  dynamicaCreatePassivePlaneArray.xpm  dynamicaCreatePassiveSphere.xpm  (+13 more)
Extras/MayaPlugin/linux/: install.sh
Extras/MayaPlugin/macosx/: install.sh
Extras/MayaPlugin/scenes/: CompositeGroup.ma  contactAttributes.ma
Extras/MayaPlugin/scripts/: AEdHingeConstraintTemplate.mel  AEdNailConstraintTemplate.mel  AEdRigidBodyTemplate.mel  AEdSixdofConstraintTemplate.mel  AEdSliderConstraintTemplate.mel  AEdSolverTemplate.mel  dg_voroPy.py  dg_voro_py_UI.mel  dynamicaUI.mel  dynamicaUITools.mel  mbUtils.mel
Extras/MayaPlugin/scripts/tags/04.01.2011/: AEdSolverTemplate.mel  dynamicaUI.mel
Extras/jpeglib/: CMakeLists.txt
Extras/wxWidgets-2.9.0/wxCMake/wxAll/: CMakeLists.txt
Extras/wxWidgets-2.9.0/wxCMake/wxSupport/: CMakeLists.txt
